# rtcache

./: .env.example  .gitignore  LICENSE  README.md  REPOSITORY_ORGANIZATION_SUMMARY.md  TESTING_GUIDE.md  pyproject.toml  requirements.txt
config/: README.md  __init__.py  action_patterns.yaml  rt_cache_config.py
experiments/BehaviorRetrieval/: README_RT_CACHE.md  REMOVED_ASSETS.md  behavior_retrieval_full_training.py  behavior_retrieval_proper.py  behavior_retrieval_rt_cache.py  behavior_retrieval_target_training.py  compare_methods.py  evaluate_br.py  fair_comparison.py  local_embedding_fix.py  rt_cache_config.py  run_behavior_retrieval.py  run_br.sh  run_comparison.py  run_integrated_methods.py  train_local.py  train_proper.py  train_rtcache.py  train_rtcache_simple.py
experiments/BehaviorRetrieval/configs/: bc_rnn_office_image_goal.json
experiments/VINN/: README_INTEGRATION.md  README_PROPER_IMPLEMENTATION.md  README_RT_CACHE.md  evaluate_vinn.py  evaluate_vinn_proper.py  fair_comparison.py  requirements_rt_cache.txt  rt_cache_config.py  run_integrated_methods.py  run_vinn.py  run_vinn_proper.sh  train_BC_local.py  train_BC_proper.py  train_BC_rtcache.py  vinn_rt_cache.py  vinn_target_training.py  vinn_with_byol_training.py
experiments/openvla-oft/: finetune.sh  inference.py
scripts/common/: __init__.py  database.py  embedding_client.py  image_utils.py
scripts/data_acquisition/: action_generators.py  data_collection_server.py
scripts/data_processing/: interpolate_actions.py  process_datasets.py
scripts/embedding/: custom_embedding_generator.py  embedding_server.py
scripts/retrieval/: models.py  results.py  retrieval_server.py
